--- a/Assignment8/index.html
+++ b/Assignment8/index.html
@@ -13,13 +13,14 @@
     <link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
     integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-
+        <!-- Including libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jscroll/2.4.1/jquery.jscroll.min.js"></script>
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
-
+    <script src="js/libraries/rita.min.js" content="text/javascript"></script>
 
     <!-- My script(s) -->
     <script src="js/script.js"></script>
+
   </head>
 
   <body>
@@ -27,35 +28,31 @@
     <!-- Blog Layout taken from https://www.w3schools.com/howto/howto_css_blog_layout.asp -->
 
   <div class="header">
-    <h2 class="text">Blog Name</h2>
+    <h2 class="text">This Is A Cooking Blog</h2>
   </div>
 
   <div class="row">
-    <div class="leftcolumn">
+    <div id="leftcolumn">
       <div class="card">
-        <h2 id="postHeading" class="text">Insert Title</h2>
-        <h5 id="date" class="text">Date and Description</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p class="text">Some text..</p>
-      </div>
-      <div class="card">
-        <h2 id="postHeading" class="text">Insert Title</h2>
-        <h5 id="date" class="text">Date and Description</h5>
-        <div class="fakeimg" style="height:200px;">Image</div>
-        <p class="text">Some text..</p>
+        <h2 class="text">This is a Title</h2>
+        <h5 id="date" class="text">Date</h5>
+        <div class="blogImg"></div>
+        <p class="text">This is a recipe<span id="dots">...</span></p>
+        <p id="more" class="text">This is more text<br></p>
+        <button id="button">Read more</button>
       </div>
     </div>
     <div class="rightcolumn">
       <div class="card">
         <h2 class="text">About Me</h2>
-        <div class="fakeimg" style="height:100px;">Image</div>
+        <div class="flickrImg"></div>
         <p class="text">About me</p>
       </div>
       <div class="card">
         <h3 class="text">Popular Post</h3>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div><br>
-        <div class="fakeimg">Image</div>
+        <div class="flickrImg"></div><br>
+        <div class="flickrImg"></div><br>
+        <div class="flickrImg"></div>
       </div>
       <div class="card">
         <h3 class="text">Follow Me</h3>
