--- a/Assignment8/index.html
+++ b/Assignment8/index.html
@@ -38,7 +38,7 @@
         <h5 id="date" class="text">Date</h5>
         <div class="blogImg"></div>
         <p class="text">This is a recipe<span id="dots">...</span></p>
-        <p id="more" class="text">This is more text<br></p>
+        <p id="more" class="text">This is more text<br><br></p>
         <button id="button">Read more</button>
       </div>
     </div>
