--- a/Assignment8/index.html
+++ b/Assignment8/index.html
@@ -39,7 +39,7 @@
         <div class="blogImg"></div>
         <p class="text">This is a recipe<span id="dots">...</span></p>
         <p id="more" class="text">This is more text<br><br></p>
-        <button id="button">Read more</button>
+        <button id="button" class="text">Read more</button>
       </div>
     </div>
     <div class="rightcolumn">
