--- a/Project3/index.html
+++ b/Project3/index.html
@@ -33,6 +33,24 @@
     <h5 class="text">All text from acozykitchen.com</h5>
   </div>
 
+  <!-- Popup Code from https://www.thepolyglotdeveloper.com/2018/02/create-email-subscription-popup-jquery/ -->
+  <div id="list-builder"></div>
+        <div id="popup-box">
+            <img src="assets/images/close.png" id="popup-close" />
+            <div id="popup-box-content">
+                <h1 class="text">Subscribe to This Really Annoying Blog</h1>
+                <p class="text">
+                    Please don't. It doesn't even do anything. I'm just here to be irritating.
+                </p>
+                <form id="popup-form" action="https://email_list_service_api.com">
+                    <input type="hidden" name="list" value="key_list_etc" />
+                    <input type="text" name="name" placeholder="Full Name" />
+                    <input type="text" name="email" placeholder="Email Address" />
+                    <button type="button" name="subscribe" class="text">Subscribe</button>
+                </form>
+            </div>
+        </div>
+
   <div class="row">
     <div id="leftcolumn">
       <div class="card">
