Now Generates Random Titles
Generates a Dish for the title including the word used in the Flickr Search

--- a/Project3/index.html
+++ b/Project3/index.html
@@ -54,8 +54,7 @@
   <div class="row">
     <div id="leftcolumn">
       <div class="card">
-        <h2 class="text">This is a Title</h2>
-        <h5 id="date" class="text">Date</h5>
+        <h2 class="text title">This is a Title</h2>
         <div class="blogImg"></div>
         <p class="text">This is a recipe<span class="dots">...</span></p>
         <p id="more" class="moreText text"></p>
@@ -69,7 +68,7 @@
         <p class="text">This is a cat picture.</p>
       </div>
       <div class="card">
-        <h3 class="text">Popular Post</h3>
+        <h2 class="text">Popular Posts</h2>
         <div class="flickrImg"></div><br>
         <div class="flickrImg"></div><br>
         <div class="flickrImg"></div>
