--- a/Project3/index.html
+++ b/Project3/index.html
@@ -30,7 +30,7 @@
 
   <div class="header">
     <h2 class="text">World's Most Annoying Blog</h2>
-    <h5 class="text">All text from acozykitchen.com</h5>
+    <p class="text">All text from acozykitchen.com</p>
   </div>
 
   <!-- Popup Code from https://www.thepolyglotdeveloper.com/2018/02/create-email-subscription-popup-jquery/ -->
@@ -54,7 +54,7 @@
   <div class="row">
     <div id="leftcolumn">
       <div class="card">
-        <h2 class="text title">This is a Title</h2>
+        <h2 class="text title"></h2>
         <div class="blogImg"></div>
         <p class="text">This is a recipe<span class="dots">...</span></p>
         <p id="more" class="moreText text"></p>
@@ -69,13 +69,13 @@
       </div>
       <div class="card">
         <h2 class="text">Popular Posts</h2>
-        <div class="flickrImg"></div><br>
-        <div class="flickrImg"></div><br>
-        <div class="flickrImg"></div>
+        <div class="flickrImg popular"></div><br>
+        <div class="flickrImg popular"></div><br>
+        <div class="flickrImg popular"></div>
       </div>
       <div class="card">
         <h3 class="text">Follow Me</h3>
-        <p class="text">Some text..</p>
+        <p class="tex aboutImg popular"><img src="assets/images/icons.png"></p>
       </div>
     </div>
   </div>
