Fixed up CSS Styling
Changed the CSS for a proper blog-like aesthetic and removed the footer.

--- a/Project3/index.html
+++ b/Project3/index.html
@@ -29,7 +29,7 @@
     <!-- Blog Layout taken from https://www.w3schools.com/howto/howto_css_blog_layout.asp -->
 
   <div class="header">
-    <h2 class="text">World's Most Annoying Blog</h2>
+    <h1 class="text">World's Most Annoying Blog</h1>
     <p class="text">All text from acozykitchen.com</p>
   </div>
 
@@ -63,12 +63,12 @@
     </div>
     <div class="rightcolumn">
       <div class="card">
-        <h2 class="text">About Me</h2>
+        <h2 class="text title">About Me</h2>
         <div class="aboutImg"><img src="assets/images/cat.png"></div>
         <p class="text">This is a cat picture.</p>
       </div>
       <div class="card">
-        <h2 class="text">Popular Posts</h2>
+        <h2 class="text title">Popular Posts</h2>
         <div class="flickrImg popular"></div><br>
         <div class="flickrImg popular"></div><br>
         <div class="flickrImg popular"></div>
@@ -78,10 +78,6 @@
         <p class="tex aboutImg popular"><img src="assets/images/icons.png"></p>
       </div>
     </div>
-  </div>
-
-  <div class="footer">
-    <h2 class="text">Footer</h2>
   </div>
 
   </body>
