Fixed issue with popup
Popup now reverts to the subscription page when exited.

--- a/Project3/index.html
+++ b/Project3/index.html
@@ -39,11 +39,7 @@
             <img src="assets/images/close.png" id="popup-close" />
             <div id="popup-box-content">
                 <h1 class="text">Subscribe to This Really Annoying Blog</h1>
-                <p class="text">
-                    Please don't. It doesn't even do anything. I'm just here to be irritating.
-                </p>
-                <form id="popup-form" action="https://email_list_service_api.com">
-                    <input type="hidden" name="list" value="key_list_etc" />
+                <p class="text">Please don't actually. It doesn't even do anything. I'm just here to be irritating.</p>
                     <input type="text" name="name" placeholder="Full Name" />
                     <input type="text" name="email" placeholder="Email Address" />
                     <button type="button" name="subscribe" class="text">Subscribe</button>
