--- a/Project3/index.html
+++ b/Project3/index.html
@@ -46,6 +46,9 @@
 
   <div class="row">
     <div id="leftcolumn">
+      <div class="ad">
+      <img src=" assets/images/ad.jpg">
+    </div>
       <div class="card">
         <h2 class="text title"></h2>
         <div class="blogImg"></div>
